# std-simd

./: .clang-format  .travis.yml  LICENSE  Makefile  README.md  install.sh  simd.h
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
benchmarks/: bench.h  rounding.cpp  run.sh  sincos.cpp
experimental/: simd
experimental/bits/: numeric_traits.h  simd.h  simd_abis.h  simd_builtin.h  simd_combine.h  simd_converter.h  simd_debug.h  simd_detail.h  simd_fixed_size.h  simd_math.h  simd_neon.h  simd_ppc.h  simd_scalar.h  simd_x86.h  simd_x86_conversions.h  struct_reflect.h
scripts/: CTestConfig.cmake  cross-cherry-pick.sh  prepare_single_header.sh  run_ctest.sh  test.cmake  to_gcc_tree.sh  vimdiff_all_tests.sh
tests/: CMakeLists.txt  abi.cmake  abi.cpp  abi_fixed_size.cpp  bitset_conversions.cpp  casts.cpp  conversions.h  enum.cpp  experimental.cpp  integer_operators.cpp  linkTest0.cpp  linkTest1.cpp  linkTestLib0.cpp  linkTestLib1.cpp  linkTestLib2.cpp  linkTestLib3.cpp  loadstore.cpp  make_vec.h  mask.cpp  mask_conversions.cpp  math.cpp  mathreference.h  metahelpers.h  operators.cpp  proposed.cpp  sfinae.cpp  simd.cpp  simd_view.h  specialmath.cpp  test_values.h  testtypes.h  uninit.cpp  unittest.h  where.cpp
tests/simple_tests/: CMakeLists.txt  alignment_compute.cpp
